# portal

./: .bazelrc  .gitignore  .gitmodules  BUILD  Cargo.toml  WORKSPACE  go.mod  makefile  package-lock.json  package.json  pull.sh  wasi-sdk-get.sh
.github/workflows/: main.yml
js/: js.bzl
knl/: BUILD  base.lc  main.tt  prtl.lc
lgen/: BUILD  Lyper.hs  base.lc  csb.h  gen.cc  lc.h  lgen.bzl  test1.lc
phl/: Phl.hs
subsystem/lib/: Cargo.toml
subsystem/loader/: Cargo.toml  build.rs
subsystem/loader/src/: cc_main.cc  lib.rs
subsystem/types/: Cargo.toml
subsystem/types/src/: lib.rs
tmp/: _media_grahamk_MyDriveLinux_Projects_pOrtl_3rdparty_ttyped_lib_base.tt.lc
tools/: k++  kargo  kcc  kcmake  kld  rargo  tools.cmake
tools/libriscv/patch/: CMakeLists.txt  memory.cpp
tools/wasm3/include/: wasm3_cpp.h
tools/wasm3/patch/: m3_api_wasi.c  m3_config_platforms.h
util/fn-utils/: Cargo.toml
util/fn-utils/src/: lib.rs
util/libs-all/: Cargo.toml
util/libs-all/src/: lib.rs
