[package]
name = "ss-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
either = "1.8.1"
wasm3 = {path = "../../3rdparty/wasm3"}

[build-dependencies]
libs-all = {path = "../../util/libs-all"}